# PronounEngine.rs

./: Cargo.toml  README.md
src/: engine.rs  main.rs  sentences.rs  shared.rs  socktest  socktest.rs
src/commands/: mod.rs  try_set.rs
