[package]
name = "pronoun_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
mysql_async = "0.30"
once_cell = "1.15"
rand = "0.8"
regex = "1.6"
serde_json = "1.0"
serde = "1.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "net"] }